# infra

./: .gitignore  .markdownlint.yaml  .mcp.json  .pre-commit-config.yaml  .renovaterc.json5  .secrets.baseline  CONTRIBUTING.md  README.md  SECURITY.md  Taskfile.yaml  renovate.json5  zensical.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  labeler.yaml  labels.yaml  renovate.json5
.renovate/: autoMerge.json5  customManagers.json5  groups.json5  infraPackages.json5  labels.json5
apps/: kustomization.yaml
argo/: app-projects-app.yaml  apps-app.yaml  apps-proj.yaml
argo-apps/: atlantis-k8s01.yaml  den1-k8s01.yaml
argo-projects/: authentik.yaml  cert-manager.yaml  cilium.yaml  device-plugins.yaml  ingress-nginx.yaml  ingress-public.yaml  ingress-tailscale.yaml  metallb.yaml  rook-ceph.yaml  signoz-k8s-infra.yaml  signoz.yaml  tailscale.yaml
bootstrap/: README.md  helmfile.yaml  setup-1password.sh  tortuga-k8s01.yaml
docs/: CNAME  glossary.md  index.md  naming-conventions.md
kubernetes/apps/janet/yahoo-finance-mcp/src/: Dockerfile  http_entrypoint.py  pyproject.toml  server.py
scripts/: generate-inventory.py  generate-llms-txt.py  install-gateway-api-crds.sh  setup-dev-environment.sh  setup-gluetun-wireguard-secrets.sh  setup-wireguard-secrets.sh  talos-vps-install.sh  validate-kustomizations.py  validate-repository.py  validate-schema-alignment.py  vendor-gateway-api-crds.sh
tofu/: .gitignore  .terraform.lock.hcl  ai-gateway.tf  backend.tf  bootstrap.tf  ci.tf  cloudflare-tokens.tf  cloudflare-tunnel.tf  cloudflare-zones.tf  ghcr-pull.tf  (+20 more)
(+1533 files in other folders)
